Alignment Issue

--- a/src/Components/FreeLancer/Freelancer.css
+++ b/src/Components/FreeLancer/Freelancer.css
@@ -12,7 +12,7 @@
 }
 .freelancer {
     margin: 50px 0px;
-    height: 4000px;
+    height: 3300px;
 }
 .footer{
     margin-bottom: 0px;
@@ -56,7 +56,7 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
-    margin-bottom: 175px;
+    margin-bottom: 200px;
     gap: 1vw;
 }
 
